Fix cursor blink wrapping fix

--- a/Responsive Web Design/Portfolio/e_styles.css
+++ b/Responsive Web Design/Portfolio/e_styles.css
@@ -596,7 +596,7 @@ main {
 }
 
 .block {
-  display: block;
+  display: inline-block;
 }
 
 /* || PROJECT SECTION */
